# aoc23

./: .gitignore  README.md
aoc23/: CMakeLists.txt  CMakeSettings.json  aoc23.cpp
aoc23/Solutions/: Day1.ixx  Day2.ixx  Day3.ixx  Day4.ixx  Day5.ixx  Day6.ixx  Day7.ixx  Day8.ixx
aoc23/Utils/: AoC.ixx  Input.ixx  Parser.ixx  Strings.ixx
